--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,16 +1,7 @@
-$body-color: #E2CFEA;
-$color-primary: #6247AA;
-$color-primary-light: #A06CD5;
-$color-secondary: #102B3F;
-$color-tertiary: #062726;
+@import 'base/reset';
+@import 'base/typography';
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import 'themes/main';
 
 body {
   background-color: $body-color;
@@ -19,15 +10,4 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
-.title {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  
-  h1 {
-    text-transform: uppercase;
-    font-size: 120px;
-  }
-}
+@import 'components/title';
