--- a/src/scss/themes/_main.scss
+++ b/src/scss/themes/_main.scss
@@ -1,5 +1,2 @@
-$body-color: #E2CFEA;
-$color-primary: #6247AA;
-$color-primary-light: #A06CD5;
-$color-secondary: #102B3F;
-$color-tertiary: #062726;
+@import 'theme_vars';
+
